[package]
name = "byteorder_extended"
version = "0.1.0"
authors = ["scalexm <martin.alex32@hotmail.fr>", "Noxivs <sum.noxivs@gmail.com>"]
description = "This crate extends the byteorder library with additionnal reading/writing functions."
readme = "README.md"
categories = ["encoding", "parsing"]
keywords = ["byte", "big-endian", "binary"]
license = "Unlicensed"

[dependencies]
byteorder = "1.0.0"